--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
 	background-color: #0100a0;
 	color: white;
 }
-
+h4, p {
+	color: black;
+}
 .header {
 	height: 50%;
 }
@@ -10,25 +12,20 @@ body {
 	width: 50%;
 }
 .scoreboard {
-	color: white;
 	text-align: right;
 	margin-right: 10%;
 }
 
-.response-field {
-
-}
 .box-container {
 	background-color: blue;
 	border: 3px solid black;
-	color: white;
 	width: 30%;
 }
 
 .category-title {
 	text-align: center;
 }
-.boxes {
+.btn {
 	display: flex;
 	flex-direction: column;
 	border: 2px solid yellow;
