Enabled one-time clicking for each question box. Text color changes according to correct or incorrect. Updated div BG color. Started first draft of README file.

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ body {
 	text-align: center;
 	border: 1px solid yellow;
 	background: blue; /* For browsers that do not support gradients */
-  background: -webkit-radial-gradient(#a6a6e8 5%, #3399ff 15%, #3333ff 60%); /* Safari 5.1-6.0 */
-  background: -o-radial-gradient(#a6a6e8 5%, #3399ff 15%, #3333ff 60%); /* For Opera 11.6-12.0 */
-  background: -moz-radial-gradient(#a6a6e8 5%, #3399ff 15%, #3333ff 60%); /* For Firefox 3.6-15 */
-  background: radial-gradient(#a6a6e8 5%, #3399ff 15%, #3333ff 60%); /* Standard syntax */
+  background: -webkit-radial-gradient(#7777da 5%, #3e64ce 15%, #1111a2 60%); /* Safari 5.1-6.0 */
+  background: -o-radial-gradient(#7777da 5%, #3e64ce 15%, #1111a2 60%); /* For Opera 11.6-12.0 */
+  background: -moz-radial-gradient(#7777da 5%, #3e64ce 15%, #1111a2 60%); /* For Firefox 3.6-15 */
+  background: radial-gradient(#7777da 5%, #3e64ce 15%, #1111a2 60%); /* Standard syntax */
 }
