--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #0100a0;
-	background-image: url("http://www.macmonkies.com/Desktops/Blue_Wave_2_1024.jpg");
+	background-image: url("../images/blue-background-with-horizontal-streaks_bke5gkugb__F0000.png");
 	color: white;
 	font-family: 'Coustard', serif;
 }
